--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 
 file.upload-dir= /uploads/
-
+#file.upload-dir=./src/main/resources/static/image
 
